# log-x-py

./: .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  AGENTS.md  AI_CONTEXT.md  ANALYSIS_INTEGRATION_POINTS.md  DOCUMENTATION_UPDATES.md  GUIDE.md  LINUX_MONITOR_COMMANDS.md  LOCAL_FOLDERS_GUIDE.md  LOCAL_GIT_GUIDE.md  PLAN_ASYNC_THREADED_WRITING.md  PLAN_ASYNC_TODO.md  PLAN_IMPLEMENTATION_FINAL.md  PLAN_INTEGRATE_WRITER.md  PLAN_REFACTOR_PROJECT_TREE.md  PROJECT_SUMMARY.md  PYTHON_312_FEATURES.md  README.md  README.rst  analyze_logs.py  benchmark_examples.py  benchmark_loggerx.py  demo_tree_render.py  logxpy-api-reference.html  pyproject.toml  quick_benchmark.py  run_and_verify_examples.py  setup-local-git.sh  test_debug_scenario.py  test_loggerx_simple.py
DOC/: boltons-in-logxpy.md  boltons-ref.md  libraries-integration.md
DOC-X/: architecture.txt  secrets.env
benchmarks/: PERFORMANCE_REPORT.md  PERFORMANCE_REPORT_OPTIMIZED.md  bench_async_1000.py  benchmark_before_after.py  optimize_logging.py  quick_debug_1000.py
code-blocks/choose-L2/: README.md  pyproject.toml
code-blocks/choose-L2/examples/: basic_usage.py
code-blocks/choose-L2/tests/: conftest.py  test_base.py  test_writers.py
code-blocks/choose-L2/writer/: __init__.py
code-blocks/choose-L2/writer/async_/: __init__.py
common/: __init__.py  base.py  cache.py  dictutils.py  fields.py  fmt.py  iterutils.py  predicates.py  si_eng1.py  sqid.py  test_si_eng1.py  test_si_eng1_full.py  types.py
docs/: COMMON_FINAL.md  COMMON_RESTRUCTURE.md  FLUSH_TECHNIQUES.md  FOLDER_STRUCTURE.md  LOGGING_FLOW_SEQUENCE_DIAGRAMS.md  MIGRATION.md  PYTHON_312_FEATURES.md  README.md  WRITER_MIGRATION_GUIDE.md  decorate-files-setup.md  errors.md  linux-monitor-cmds.md  more-itertools-ref.md
examples/: README.md  example_async_basic.py  example_async_disable.py  example_async_high_throughput.py  example_writer_types.py  (+1 more)
examples-log-view/: COMPLETE.txt  README.md  VISUAL_GUIDE.md  example_01_basic.py  example_05_data_pipeline.py  example_06_deep_nesting.py  example_08_ultra_deep_nesting.py  run_all.sh  view_with_logxpy_cli_view.py
logxpy/: MANIFEST.in  README.rst  __init__.py  setup.cfg  setup.py  tox.ini
logxpy/benchmarks/: serialization.py  serialization_complex.py
logxpy/docs/source/: conf.py  index.rst  introduction.rst  news.rst  quickstart.rst  scientific-computing.rst
logxpy/docs/source/generating/: actions.rst  asyncio.rst  errors.rst  loglevels.rst  messages.rst  migrating.rst  testing.rst  threads.rst  twisted.rst  types.rst
logxpy/docs/source/outputting/: elasticsearch.rst  journald.rst  output.rst
logxpy/docs/source/reading/: reading.rst
logxpy/examples/: 01_simple_logging.py  02_decorators.py  03_context_scopes.py  04_async_tasks.py  05_error_handling.py  06_data_types.py  07_generators_iterators.py  08_tracing_opentelemetry.py  09_configuration.py  10_advanced_patterns.py  11_complex_ecommerce.py  12_complex_banking.py  13_complex_data_pipeline.py  xx_Color_Methods1.py
logxpy/examples/example-output-log/: README.md  SUMMARY.txt
logxpy/examples/legacy/: asyncio_linkcheck.py  cross_process_server.py  journald.py  rometrip_actions.py  stdlib.py
logxpy/logxpy/: __init__.py  _action.py  _async.py  _base.py  _cache.py  _config.py  _message.py  _output.py  _sqid.py  _traceback.py  _types.py  cli.py  loggerx.py  parse.py
logxpy/logxpy/tests/: __init__.py  test_api.py  test_async.py  test_compat.py  test_config.py  test_decorators.py  test_fmt.py  test_generators.py  test_json.py  test_loggerx.py  test_parse.py  test_pool.py  test_twisted.py
logxpy/presentations/bostonpython-2018/: watchtower.py
logxpy/presentations/dask/: badmath.py  presentation.md  slow.py
logxpy/presentations/scientific-logging/: presentation.md
logxpy/src/: __init__.py  _async.py  _async_destinations.py  _async_writer.py  _compat.py  _dest.py  _fmt.py  _json_line.py  _mask.py  _message.py  _output.py  _pool.py  _si_time.py  _sqid.py  _validation.py  _writer.py  category.py  data_types.py  decorators.py  file_stream.py  filter.py  journald.py  loggerx.py  logx.py  parse.py  stdlib.py  system_info.py  testing.py
logxpy_cli_view/: FEATURES.md  NEWS.rst  README.md  REFACTORING.md  __init__.py  config.example.json  pyproject.toml
logxpy_cli_view/examples/: README.md
logxpy_cli_view/examples/example-01-simple-task/: main.py
logxpy_cli_view/examples/example-03-errors/: main.py
logxpy_cli_view/examples/example-06-filtering/: main.py
logxpy_cli_view/examples/example-07-color-themes/: main.py
logxpy_cli_view/examples/example-09-generating/: main.py
logxpy_cli_view/examples/example-10-deep-functions/: main.py
logxpy_cli_view/examples/example-11-async-tasks/: main.py
logxpy_cli_view/src/: __init__.py  _cli.py  _color.py  _compat.py  _errors.py  _export.py  _parse.py  _render.py  _stats.py  _tail.py  _theme.py  filter.py  tree.py
logxpy_cli_view/src/logxpy_cli_view/: __init__.py  _cli.py  _color.py  _compat.py  _errors.py  _export.py  _parse.py  _patterns.py  _render.py  _tail.py  _theme.py  _util.py  filter.py  format.py  tree.py
logxpy_cli_view/src/logxpy_cli_view/tree_format/: __init__.py
logxpy_cli_view/src/tree_format/: __init__.py  _text.py
logxpy_cli_view/tests/: __init__.py  test_cli.py  test_compat.py  test_filter.py  test_format.py  test_tree.py  test_util.py
logxy-log-parser/: FOLDER_STRUCTURE.md  IMPLEMENTATION_PLAN.md  README.md  errors.html  performance_report.html  pyproject.toml
logxy-log-parser/examples/: 01_basic.py  02_filtering.py  03_analysis.py  11_indexing_system.py  12_time_series_analysis.py  16_complete_reference.py  basic_usage.py  example_parser_usage.py  monitoring.py
logxy-log-parser/examples-log-view/: complete-example-01.py  simple_view.py
logxy-log-parser/logxy_log_parser/: __init__.py  aggregation.py  analyzer.py  cli.py  config.py  core.py  export.py  filter.py  index.py  monitor.py  simple.py  sqid.py  tree.py  types.py  utils.py
logxy-log-parser/tests/: __init__.py  conftest.py  test_analyzer.py  test_core.py  test_export.py  test_filter.py  test_tree.py
(+592 files in other folders)
