[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "log-x-py"
version = "0.4.0"
description = "Structured logging ecosystem with tree visualization and log parsing"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [
    { name = "LogXPy Contributors" }
]
keywords = ["logging", "logxpy", "tree-view", "log-parser", "structured-logging"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Logging",
]

# Core dependencies (shared by all packages)
dependencies = [
    "boltons>=24.0.0",      # Core utilities (cacheutils, dictutils, iterutils, etc.)
    "more-itertools>=10.0.0",  # 160+ functions extending itertools
]

[tool.hatch.build.targets.wheel]
packages = [
    "logxpy",
    "logxpy_cli_view",
    "logxy_log_parser",
    "common",
]

[tool.hatch.build.targets.editable]
packages = [
    "logxpy",
    "logxpy_cli_view",
    "logxy_log_parser",
    "common",
]

[project.optional-dependencies]
# Core logxpy dependencies
logxpy = [
    "zope.interface>=5.0",
    "pyrsistent>=0.11.8",
    "orjson; implementation_name=='cpython'",
]

# CLI viewer dependencies
cli-view = [
    "jmespath>=1.0.0",
    "iso8601>=2.0.0",
    "colored>=2.0.0",
    "toolz>=0.12.0",
    "win-unicode-console>=0.5;platform_system=='Windows'",
]

# Parser dependencies
parser = [
    "pandas>=2.0",
    "rich>=13.0",
    "click>=8.0",
    "jinja2>=3.0",
]

# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.1",
]

# Everything
all = [
    "log-x-py[logxpy,cli-view,parser,dev]",
]

[project.scripts]
# CLI viewer commands
logxpy-view = "logxpy_cli_view.src._cli:main"
logxpy-cli-view = "logxpy_cli_view.src._cli:main"

# Parser commands
logxy = "logxy_log_parser.src.cli:main"
logxy-query = "logxy_log_parser.src.cli:main"
logxy-analyze = "logxy_log_parser.src.cli:main"
logxy-view = "logxy_log_parser.src.cli:main"
logxy-tree = "logxy_log_parser.src.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
    "--tb=short",
]

[tool.mypy]
python_version = "3.12"
mypy_path = "logxpy/src:logxpy_cli_view/src:logxy_log_parser/src:common"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
show_error_codes = true

[[tool.mypy.overrides]]
module = ["logxpy.*", "logxpy_cli_view.*", "logxy_log_parser.*"]
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 120
src = ["logxpy/src", "logxpy_cli_view/src", "logxy_log_parser/src", "common", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "F",      # Pyflakes
    "I",      # isort
    "N",      # pep8-naming
    "W",      # pycodestyle warnings
    "UP",     # pyupgrade
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "SIM",    # flake8-simplify
    "TCH",    # flake8-type-checking
    "TID",    # flake8-tidy-imports
    "Q",      # flake8-quotes
    "FLY",    # flynt
    "PERF",   # perflint
    "RUF",    # Ruff-specific rules
]
ignore = [
    "E501",   # Line too long (handled by formatter)
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
known-first-party = ["logxpy", "logxpy_cli_view", "logxy_log_parser", "common"]
