[metadata]
license_files = LICENSE

# See the docstring in versioneer.py for instructions. Note that you must
# re-run 'versioneer.py setup' after changing this section, and commit the
# resulting files.

[versioneer]
VCS = git
style = pep440
versionfile_source = logxpy/_version.py
versionfile_build = logxpy/_version.py
tag_prefix = 
parentdir_prefix = logxpy-

[flake8]
max-line-length = 88
extend-ignore = E203