[project]
name = "choose-L2"
version = "0.1.0"
description = "Cross-platform file writer (3 selected implementations)"
requires-python = ">=3.12"
dependencies = []

[project.optional-dependencies]
dev = ["mypy", "ruff"]

[tool.mypy]
strict = true

[tool.ruff]
line-length = 100
select = ["E", "F", "I", "N", "W"]
